Archive2/3e/d6bcd03474a170/output
main.cpp: In function 'int main()':
main.cpp:5:28: error: expected ';' before '!' token
     for (nc = 0; getchar() ! = EOF, ++nc)
                            ^
main.cpp:5:30: error: expected primary-expression before '=' token
     for (nc = 0; getchar() ! = EOF, ++nc)
                              ^
